LWCs/Sentiment and Coaching/objects/VoiceCall/fields/Agent_Performance_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Agent_Performance_Evaluation__c</fullName>
    <label>Agent Performance Evaluation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>