LWCs/Sentiment and Coaching/objects/VoiceCall/fields/Agent_Performance_Rating__c.field-meta.xml
<CustomField>
    <fullName>Agent_Performance_Rating__c</fullName>
    <label>Agent Performance Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>