LWCs/Sentiment and Coaching/objects/VoiceCall/fields/Call_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Call_Sentiment__c</fullName>
    <label>Call Sentiment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>