LWCs/Sentiment and Coaching/objects/VoiceCall/fields/Request_Historical_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Request_Historical_Analysis__c</fullName>
    <description>When set to true, triggers historical sentiment and coaching analysis. Cleared automatically by the flow after processing.</description>
    <label>Request Historical Analysis</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>