LWCs/Sentiment and Coaching/objects/VoiceCall/fields/SDO_Service_Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Case_Subject__c</fullName>
    <description>Used to display in Omni channel for consistency across channels</description>
    <formula>Case__r.Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Subject</label>
    <type>Text</type>
</CustomField>