LWCs/Sentiment and Coaching/objects/VoiceCall/fields/Sentiment_Rating__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Rating__c</fullName>
    <label>Sentiment Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>