LWCs/Sentiment and Coaching/objects/VoiceCall/listViews/ECIAllVoice_26iKue34.listView-meta.xml
<ListView>
    <fullName>ECIAllVoice_26iKue34</fullName>
    <columns>Name</columns>
    <columns>CreatedBy</columns>
    <columns>CallStartDateTime</columns>
    <columns>FromPhoneNumber</columns>
    <columns>CallDurationInSeconds</columns>
    <columns>RelatedRecord</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CreatedDate</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:14</value>
    </filters>
    <filters>
        <field>IsRecorded</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>ECI Voice Calls</label>
</ListView>