LWCs/Sentiment and Coaching/objects/VoiceCall/listViews/SCV_Basic_Queue_CCQ_04vHs0000010zWZ_VoiceCall.listView-meta.xml
<ListView>
    <fullName>SCV_Basic_Queue_CCQ_04vHs0000010zWZ_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>SCV Basic Queue</label>
    <queue>SCV_Basic_Queue_CCQ_04vHs0000010zWZ</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>