LWCs/Sentiment and Coaching/objects/VoiceCall/listViews/SDO_Service_Voice_Call_VoiceCall.listView-meta.xml
<ListView>
    <fullName>SDO_Service_Voice_Call_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>General Voice</label>
    <queue>SDO_Service_Voice_Call</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>